# figures

./: CMakeLists.txt  main.cpp
glfw/lib/: glfw3.lib
include/: Drawable.h  FigureCollection.h
include/figures/: Circle.h  Figures.h  Pentagon.h  Polygon2D.h  Rectangle.h  Square.h  Triangle.h  Vector2D.h
include/screens/: ConsoleScreen.h  GlScreen.h
src/: GlScreen.cpp
